# BrowserSearch

./: Cargo.toml  README.md  Search  alfred.odin  bookmark_search.lua  empty-string-array.odin  history_search.lua  info.plist  main.odin  sql-multi-select.odin  sql_helpers.odin  sql_multi.odin  suggest.lua
odin-sqlite/: sqlite3.odin
src/: alfred.rs  bookmarks.rs  browser.rs  cache.rs  db.rs  focus-arc.js  focus-chromium.js  focus-webkit.js  history.rs  list-arc.js  list-chromium.js  list-gecko.js  list-webkit.js  main.rs  search.rs  tabs.rs  tie_break.rs  utils.rs
