[package]
name = "browser_search"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tempfile = "3.8"
dirs = "5.0"
plist = "1.5"
url = "2.4"
env_logger = "0.10"
log = "0.4"
bincode = "1.3"
rayon = "1.8"
thiserror = "1.0"

reqwest = { version = "0.11", features = ["blocking"] }
osascript = "0.3.0"
nucleo = "0.5.0"
